force/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>VSP Leads Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Group Enrolled</fullName>
        </values>
        <values>
            <fullName>IP Enrolled</fullName>
        </values>
        <values>
            <fullName>Incomplete</fullName>
        </values>
        <values>
            <fullName>Nurture</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Altair_Marketing_Communications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Altair Marketing-Communications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Altair_Marketing_General__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Altair Marketing-General</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Altair_Score__c</fullName>
        <description>The score indicates interaction and profile strength for Altair.</description>
        <inlineHelpText>This score indicates interaction and profile strength. Profile strength ranges from A-D with A being the highest. The interaction score ranges from 1-4 with 1 being the highest.</inlineHelpText>
        <label>Altair Score</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altair__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Altair</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSR_Sales_Agent_Name__c</fullName>
        <label>CSR/Sales Agent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Back_Date__c</fullName>
        <label>Call Back Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Ineligibility__c</fullName>
        <label>Campaign Ineligibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data Issue</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Member Requested</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consumer_ID__c</fullName>
        <label>Consumer ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coverage_Level_Needed__c</fullName>
        <label>Coverage Level Needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self</fullName>
                </value>
                <value>
                    <fullName>Self+1</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_By_VSP_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field will be populated by the Web to Lead feature from the Eloqua lead web form currently filled out by Careington and VSP CSRs.</description>
        <label>Created By VSP User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>D2C_Batch_Qualify__c</fullName>
        <formula>IF(AND(Subscriber_Status__c != NULL,Purchase_Channel__c != NULL,Consumer_ID__c != NULL,IsConverted = FALSE), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D2C Batch Qualify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>D2C_Pre_Sales_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>D2C Pre Sales Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DialSource__DS_Owner_ID__c</fullName>
        <description>The record owner&apos;s Salesforce ID. Used in Campaign source reports to distribute the records using the Record Owner Distribution feature</description>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DS Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Datetime_of_Last_Disposition_DS__c</fullName>
        <description>Time stamp of when the last Disposition was clicked</description>
        <label>Datetime of Last Disposition</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialSource__Last_Call_Campaign_Name__c</fullName>
        <description>Name of the Call Campaign the record was last called from</description>
        <label>Last Call Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Last_Disposition_DS__c</fullName>
        <description>Name of the last Disposition clicked</description>
        <label>Last Disposition</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Next_Call_DS__c</fullName>
        <description>Datetime field used to set the next call datetime for reference in automation or Reports/List Views</description>
        <label>Next Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialSource__Total_Call_Count_DS__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of calls made on this record</description>
        <label>Total Call Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disposition_of_Call__c</fullName>
        <label>Disposition of Call</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transferred to Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Sent email flyer or direct mailer</fullName>
                </value>
                <value>
                    <fullName>Referred caller to vspdirect.com</fullName>
                </value>
                <value>
                    <fullName>Referred caller to Stay website</fullName>
                </value>
                <value>
                    <fullName>Referred back to Partner/Broker</fullName>
                </value>
                <value>
                    <fullName>No action taken</fullName>
                </value>
                <value>
                    <fullName>Do Not Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eloqua_Contact_ID__c</fullName>
        <label>Eloqua Contact ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Lead_Activitis__c</fullName>
        <formula>HYPERLINK(&quot;https://secure.p03.eloqua.com/cvp.aspx?LP=VPR2&amp;elqExtUserName=SFDC.Integration&amp;elqExtPwdHash=999645ce-a4ad-472d-9255-59602b503e98%2c998AF8BE5F9DB3A0FC52E5E1AFA6518B9D714FEE7A444C7B1E90B6593EE7763D661CB10E4499E51FCC9E93C1A498577C33B53532A93CBF0FAD5BCA8B3261095D&amp;Url=FlexReports/DisplayReport2.aspx?StandardReportID=1297%26EmailAddress=&quot;&amp; Email &amp;&quot;%26ShowPrintOption=True&quot;, &quot;Marketing Activities&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eloqua Lead Activities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Lead_Score__c</fullName>
        <inlineHelpText>This score indicates interaction and profile strength. Profile strength ranges from A-D with A being the highest. The interaction score ranges from 1-4 with 1 being the highest.</inlineHelpText>
        <label>Eloqua Score</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eyefinity_Marketing_Communications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eyefinity Marketing-Communications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eyefinity_Marketing_General__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eyefinity Marketing-General</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eyefinity_Score__c</fullName>
        <description>The score indicates interaction and profile strength for Eyefinity.</description>
        <inlineHelpText>This score indicates interaction and profile strength. Profile strength ranges from A-D with A being the highest. The interaction score ranges from 1-4 with 1 being the highest.</inlineHelpText>
        <label>Eyefinity Score</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eyefinity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eyefinity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>From_Lead_Indicator__c</fullName>
        <defaultValue>true</defaultValue>
        <label>From Lead Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IP_Behavioral_Score__c</fullName>
        <formula>(LPUV_Score_1__c*0.084)+(LPUV_Score_2__c*0.109)+(LPUV_Score_3__c*0.05)+(LPUV_Score_4__c*0.0153)+(LPUV_Score_5__c*0.148)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IP Behavioral Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Purchase_Date__c</fullName>
        <label>IP Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LPUV_Score_1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Indicates whether the Lead has an associated activity where the customer viewed the Abandoned Cart Email.</description>
        <inlineHelpText>Value &gt; 0 indicates consumer has viewed the Abandoned Cart Marketing Email.</inlineHelpText>
        <label>LPUV Score 1</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LPUV_Score_2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Indicates whether the Lead has an associated activity created by the consumer clicking through an email.</description>
        <inlineHelpText>Value &gt; 0 indicates consumer clicked through a marketing email.</inlineHelpText>
        <label>LPUV Score 2</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LPUV_Score_3__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Indicates whether the Lead has an associated activity generated by the consumer visiting the website.</description>
        <inlineHelpText>Value &gt; 0 indicates consumer has visited the website.</inlineHelpText>
        <label>LPUV Score 3</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Capture_Date__c</fullName>
        <label>Lead Capture Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Details__c</fullName>
        <label>Lead Source Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Most_Recent__c</fullName>
        <label>Lead Source - Most Recent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>External Referral</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Seminar</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Purchased Other</fullName>
                </value>
                <value>
                    <fullName>Purchased Neustar</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>D2C</fullName>
                    <default>true</default>
                    <label>D2C</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Likely_IP_Start_Date__c</fullName>
        <label>Likely IP Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marchon_Marketing_Communications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marchon Marketing-Communications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marchon_Marketing_General__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marchon Marketing-General</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marchon_Score__c</fullName>
        <description>The score indicates interaction and profile strength for Marchon.</description>
        <inlineHelpText>This score indicates interaction and profile strength. Profile strength ranges from A-D with A being the highest. The interaction score ranges from 1-4 with 1 being the highest.</inlineHelpText>
        <label>Marchon Score</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marchon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marchon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>HYPERLINK(  &quot;/&quot; +  Id   , FirstName + &apos; &apos; +  LastName )</formula>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optics_Marketing_Communications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optics Marketing-Communications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optics_Marketing_General__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optics Marketing-General</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optics_Score__c</fullName>
        <description>The score indicates interaction and profile strength for Optics.</description>
        <inlineHelpText>This score indicates interaction and profile strength. Profile strength ranges from A-D with A being the highest. The interaction score ranges from 1-4 with 1 being the highest.</inlineHelpText>
        <label>Optics Score</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Persona__c</fullName>
        <label>Persona</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plans_of_Interest__c</fullName>
        <label>Plans of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Easy Options</fullName>
                </value>
                <value>
                    <fullName>Enhanced</fullName>
                </value>
                <value>
                    <fullName>Eyewear Only</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>New Every 2</fullName>
                </value>
                <value>
                    <fullName>Standard - Florida</fullName>
                    <isActive>false</isActive>
                    <label>Standard - Florida</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Channel__c</fullName>
        <label>Purchase Channel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_IP__c</fullName>
        <label>Reason for IP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending or In Retirement</fullName>
                </value>
                <value>
                    <fullName>Employer dropped group coverage</fullName>
                </value>
                <value>
                    <fullName>Left company/lost job</fullName>
                </value>
                <value>
                    <fullName>Self-Employed</fullName>
                </value>
                <value>
                    <fullName>Stay-at-home</fullName>
                </value>
                <value>
                    <fullName>Part-time</fullName>
                </value>
                <value>
                    <fullName>Age-out (26+)</fullName>
                </value>
                <value>
                    <fullName>Shopping for a family member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_of_Phone_Call__c</fullName>
        <label>Source of Phone Call</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Status__c</fullName>
        <label>Subscriber Status</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_Campaign_Content__c</fullName>
        <label>UTM Campaign Content</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_Campaign_Medium__c</fullName>
        <label>UTM Campaign Medium</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_Campaign_Name__c</fullName>
        <label>UTM Campaign Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_Campaign_Source__c</fullName>
        <label>UTM Campaign Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_Campaign_Term__c</fullName>
        <label>UTM Campaign Term</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VSP_Global_Marketing_Communications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VSP Global Marketing-Communications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VSP_Global_Marketing_General__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VSP Global Marketing-General</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Care_Marketing_Communications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vision Care Marketing-Communications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Care_Marketing_General__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vision Care Marketing-General</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Care_Score__c</fullName>
        <description>The score indicates interaction and profile strength for Vision Care.</description>
        <inlineHelpText>This score indicates interaction and profile strength. Profile strength ranges from A-D with A being the highest. The interaction score ranges from 1-4 with 1 being the highest.</inlineHelpText>
        <label>Vision Care Score</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Care__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vision Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qualtrics__Last_Survey_Invitation__c</fullName>
        <label>Last Survey Invitation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>qualtrics__Last_Survey_Response__c</fullName>
        <label>Last Survey Response</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>All_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>D2C_Batch_Qualify__c</columns>
        <columns>Consumer_ID__c</columns>
        <columns>Purchase_Channel__c</columns>
        <columns>Subscriber_Status__c</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>*All Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Leads2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Barb&apos;s All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Altair_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Altair Queue</label>
        <queue>Altair_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>D2C_Batch_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>D2C_Batch_Qualify__c</columns>
        <columns>Consumer_ID__c</columns>
        <columns>Purchase_Channel__c</columns>
        <columns>Subscriber_Status__c</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>D2C_Batch_Qualify__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Subscriber_Status__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Purchase_Channel__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>D2C Batch Leads</label>
    </listViews>
    <listViews>
        <fullName>Marchon_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Marchon Queue</label>
        <queue>Marchon_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>D2C_Lead</fullName>
        <active>true</active>
        <businessProcess>VSP Leads Process</businessProcess>
        <description>Lead records for Direct-to-Consumer Effort</description>
        <label>D2C Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>VSP_Leads</fullName>
        <active>true</active>
        <businessProcess>VSP Leads Process</businessProcess>
        <description>General Lead records created for VSP Global</description>
        <label>VSP Leads</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VSPR2_Donot_allow_Company_in_D2C_Leads</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.DeveloperName = &apos;D2C_Lead&apos;)&amp;&amp; ( !IsBlank(Company))</errorConditionFormula>
        <errorDisplayField>Company</errorDisplayField>
        <errorMessage>Please do not enter a Company Name for D2C Leads.</errorMessage>
    </validationRules>
</CustomObject>